--- a/util/config.json
+++ b/util/config.json
@@ -3,5 +3,5 @@
   "derivatives_folder": "derivatives",
   "preprocessed_eeg_folder": "preprocessed_eeg",
   "preprocessed_stimuli_folder": "preprocessed_stimuli",
-  "split_folder": "split_data"
+  "split_folder": "toy_split"
 }
